--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
   <div class="timer">
     <div class="controls">
-      <input id="duration" value="30" />
+      <input id="duration" value="15" />
       <div>
-        <button id="start"><i class="fas fa-play"></i></button>
-        <button id="pause"><i class="fas fa-pause"></i></button>
+        <button id="start">
+          <i class="fas fa-play"></i>
+        </button>
+        <button id="pause">
+          <i class="fas fa-pause"></i>
+        </button>
       </div>
     </div>
     <svg class="dial">
@@ -21,6 +25,7 @@
     </svg>
   </div>
 
+  <!-- scripts -->
   <script src="timer.js"></script>
   <script src="index.js"></script>
 </body>
